Added a simple g-streamer pipeline, where a background thread keeps playing the test audio stream. Added a new layout for the gallery.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context=".FullscreenActivity">
+    tools:context=".MainActivity">
 
     <FrameLayout
         android:id="@+id/fullscreen_content"
@@ -50,6 +50,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="5dp"
+                        android:clickable="false"
+                        android:alpha="0.5"
                         android:background="@drawable/svg_hdr" />
 
                     <ImageButton
@@ -57,6 +59,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="5dp"
+                        android:clickable="false"
+                        android:alpha="0.5"
                         android:background="@drawable/svg_burst" />
 
                     <ImageButton
@@ -64,6 +68,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="5dp"
+                        android:clickable="false"
+                        android:alpha="0.5"
                         android:background="@drawable/svg_schedule" />
 
                 </LinearLayout>
@@ -106,6 +112,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
+                        android:clickable="false"
+                        android:alpha="0.5"
                         android:background="@drawable/svg_color" />
 
                     <ImageButton
@@ -113,6 +121,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
+                        android:clickable="false"
+                        android:alpha="0.5"
                         android:background="@drawable/svg_iso" />
 
                     <ImageButton
@@ -120,6 +130,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
+                        android:clickable="false"
+                        android:alpha="0.5"
                         android:background="@drawable/svg_camera" />
 
                     <ImageButton
@@ -127,12 +139,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
+                        android:clickable="false"
+                        android:alpha="0.5"
                         android:background="@drawable/svg_aperture" />
 
                     <ImageButton
                         android:id="@+id/focus_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:clickable="false"
+                        android:alpha="0.5"
                         android:background="@drawable/svg_focus" />
 
                 </LinearLayout>
@@ -163,8 +179,9 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:layout_gravity="center|top"
+            android:gravity="center"
             android:textAlignment="center"
-            android:text="G-Streamer version: " />
+            android:text="G-Streamer version" />
 
     </FrameLayout>
 
